HW2/part4/t19.output
running e2c
compiling the C generated code
t19.c: In function ‘main’:
t19.c:4:5: error: expected identifier or ‘(’ before ‘,’ token
 int , ;
     ^
t19.c:5:2: error: expected expression before ‘=’ token
  = 25;
  ^
t19.c:6:19: error: expected expression before ‘)’ token
 while( 0 >= (10 - )){
                   ^
t19.c:8:2: error: expected expression before ‘=’ token
  = 20 - ;
  ^
t19.c:9:14: error: expected expression before ‘)’ token
 while( 0 >= ()){
              ^
t19.c:11:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t19.c:12:1: error: ‘else’ without a previous ‘if’
 else if( 0 >= (15 - )){
 ^
t19.c:12:21: error: expected expression before ‘)’ token
 else if( 0 >= (15 - )){
                     ^
t19.c:14:14: error: expected expression before ‘)’ token
 while( 0 >= ()){
              ^
t19.c:16:2: error: expected expression before ‘=’ token
  = 10 / ;
  ^
t19.c:17:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t19.c:18:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t19.c:19:1: error: ‘else’ without a previous ‘if’
 else { = 10 - ;
 ^
t19.c:19:8: error: expected expression before ‘=’ token
 else { = 10 - ;
        ^
t19.c:20:14: error: expected expression before ‘)’ token
 while( 0 >= ()){
              ^
t19.c:22:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t19.c:23:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t19.c:24:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t19.c:25:1: error: expected declaration or statement at end of input
 }
 ^
t19.c:25:1: error: expected declaration or statement at end of input
t19.c:25:1: error: expected declaration or statement at end of input
t19.c:25:1: error: expected declaration or statement at end of input
t19.c:25:1: error: expected declaration or statement at end of input
t19.c:25:1: error: expected declaration or statement at end of input
t19.c:25:1: error: expected declaration or statement at end of input
